--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -58,7 +58,7 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - if: ${{ matrix.files != 'arch'}}
-      name: Build and Upload
+      name: Build and Upload All
       uses: docker/build-push-action@v4
       with:
         context: .
@@ -69,7 +69,7 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
       
     - if: ${{ matrix.files == 'arch'}}
-      name: Build and Upload
+      name: Build and Upload amd64 Only
       uses: docker/build-push-action@v4
       with:
         context: .
