Add: moving to doc site

--- a/book.toml
+++ b/book.toml
@@ -1,9 +1,9 @@
 [book]
-title = "STM32G431KB Documentation"
+title = "STM32 Docker Dev Container Documentation"
 authors = ["Jason Teng"]
 language = "en"
 multilingual = false
-src = "docs_src/src"
+src = "docs_src/page"
 
 [build]
 build-dir = "docs"
