--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,7 @@ on:
       - '*'
 
 jobs:
-  Build_Upload:
+  Build_Upload_AMD64:
     runs-on: ubuntu-20.04
     permissions:
       contents: read
@@ -49,23 +49,64 @@ jobs:
     - name: Set Buildx
       uses: docker/setup-buildx-action@v2
 
-    - if: ${{ matrix.files != 'arch'}}
-      name: Build and Upload All
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64
-        file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-      
-    - if: ${{ matrix.files == 'arch'}}
-      name: Build and Upload amd64 Only
+    - name: Build and Upload amd64 Only
       uses: docker/build-push-action@v4
       with:
         context: .
         platforms: linux/amd64
+        file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+
+  Build_Upload_ARM64:
+    runs-on: [self-hosted, linux, ARM64]
+    permissions:
+      contents: read
+      packages: write
+
+    strategy:
+      matrix:
+        files: [ubuntu, debian, alpine]
+         
+    steps:
+    - name: Checkout project
+      uses: actions/checkout@v3
+      
+    - name: Docker meta ubuntu
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/stm32-builder
+          ${{ vars.REGISTRY }}/stm32-builder
+        tags: type=ref,event=tag
+        flavor: prefix=${{ matrix.files }}-,onlatest=true
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Log in to Github Container Registry
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      with:
+        registry: ${{ vars.REGISTRY }}
+        username: ${{ secrets.USER_GITHUB_PERSONAL }}
+        password: ${{ secrets.TOKEN_GITHUB_PERSONAL }}
+        
+    - name: Set QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Build and Upload ARM64
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        platforms: linux/arm64
         file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
         push: true
         tags: ${{ steps.meta.outputs.tags }}
