--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -7,6 +7,8 @@ ARG ARM_VERSION=12.2.rel1
 
 RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM" > /log
 
+RUN if [ "$TARGETPLATFORM" = "linux/arm64" ]; then apk --no-cache add qemu-aarch64; fi
+
 # Prep basic packages to build STM32 CMake project
 RUN apk --no-cache add \
 	gcompat libc6-compat libstdc++ g++ gcc \
