--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ env:
 
 jobs:
   Build_Test_AMD64:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       packages: write
@@ -71,14 +71,14 @@ jobs:
         sudo rm -r ${{ github.workspace }}/hybrid-*
 
   Build_Test_ARM64:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       packages: write
 
     strategy:
       matrix:
-        files: [ubuntu, debian]
+        files: [ubuntu, debian, alpine]
 
     steps:
     - name: free disk space from docker
