--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -49,9 +49,7 @@ jobs:
     - name: Set Buildx
       uses: docker/setup-buildx-action@v2
 
-    - if: |
-        ${{ matrix.files != 'arch'}}
-        ${{ matrix.files != 'alpine'}}
+    - if: ${{ matrix.files != 'arch'}}
       name: Build and Upload All
       uses: docker/build-push-action@v4
       with:
@@ -62,9 +60,7 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
       
-    - if: |
-        ${{ matrix.files == 'arch'}}
-        ${{ matrix.files == 'alpine'}}
+    - if: ${{ matrix.files == 'arch'}}
       name: Build and Upload amd64 Only
       uses: docker/build-push-action@v4
       with:
