--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -18,11 +18,9 @@ RUN apt-get update && apt-get install -y \
 # Get ARM Toolchain
 RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then export ARM_ARCH=x86_64; \
 	else export ARM_ARCH=aarch64; \
-    fi
-
-RUN echo "Downloading ARM GNU GCC for Platform: $ARM_ARCH"
-
-RUN mkdir ${TOOLS_PATH} \
+    fi \
+	&& echo "Downloading ARM GNU GCC for Platform: $ARM_ARCH" \
+	&& mkdir ${TOOLS_PATH} \
 	&& curl -Lo gcc-arm-none-eabi.tar.xz "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-${ARM_ARCH}-arm-none-eabi.tar.xz" \
 	&& tar xf gcc-arm-none-eabi.tar.xz --strip-components=1 -C ${TOOLS_PATH} \
 	&& rm gcc-arm-none-eabi.tar.xz \
