--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -9,6 +9,7 @@ RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM" > /log
 
 # Prep basic packages to build STM32 CMake project
 RUN apk --no-cache add \
+	build-base \
 	gcompat libc6-compat libstdc++ g++ gcc \
 	make cmake ninja \
 	git gnupg \
