--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -14,7 +14,7 @@ RUN apk update && apk add --no-cache \
 	make cmake ninja \
 	git gnupg \
 	stlink \
-	bash curl
+	bash curl xz
 
 # Get ARM Toolchain
 RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then export ARM_ARCH=x86_64; \
