--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -11,6 +11,7 @@ RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM" > /log
 RUN apk update && apk add --no-cache \
 	alpine-sdk \
 	build-base \
+	gcompat libc6-compat libstdc++ g++ gcc \
 	make cmake ninja \
 	git gnupg \
 	stlink \
