--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -17,6 +17,8 @@ RUN apk update && apk add --no-cache \
 	stlink \
 	bash curl xz
 
+RUN apk add --no-cache --virtual build-dependencies \
+
 # Get ARM Toolchain
 RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then export ARM_ARCH=x86_64; \
 	else export ARM_ARCH=aarch64; \
