--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -17,7 +17,7 @@ RUN apk update && apk add --no-cache \
 	stlink \
 	bash curl xz
 
-RUN apk add --no-cache --virtual build-dependencies \
+RUN apk add --no-cache --virtual build-dependencies
 
 # Get ARM Toolchain
 RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then export ARM_ARCH=x86_64; \
