--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -9,8 +9,8 @@ RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM" > /log
 
 # Prep basic packages to build STM32 CMake project
 RUN apk update && apk add --no-cache \
-	alpine-sdk \
 	build-base \
+	clang llvm-static llvm-dev clang-static clang-dev \
 	gcompat libc6-compat libstdc++ g++ gcc \
 	make cmake ninja \
 	git gnupg \
