Edit: syntax for action

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -56,10 +56,8 @@ jobs:
     - name: Set Buildx
       uses: docker/setup-buildx-action@v2
 
-    - if: |
-        ${{ matrix.files != 'arch'}}
-        ${{ matrix.files != 'alpine'}}
-      name: Build and Upload amd64 and arm64
+    - name: Build and Upload amd64 and arm64
+      if: ${{ matrix.files != 'arch'}} && ${{ matrix.files != 'alpine'}}
       uses: docker/build-push-action@v4
       with:
         context: .
@@ -69,10 +67,8 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
       
-    - if: |
-        ${{ matrix.files == 'arch'}}
-        ${{ matrix.files == 'alpine'}}
-      name: Build and Upload amd64
+    - name: Build and Upload amd64
+      if: ${{ matrix.files == 'arch'}} && ${{ matrix.files == 'alpine'}}
       uses: docker/build-push-action@v4
       with:
         context: .
