--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -12,7 +12,7 @@ RUN apk add --no-cache
 RUN apk update && apk add --no-cache --virtual build-dependencies \
 	build-base \
 	clang llvm-static llvm-dev clang-static clang-dev \
-	gcompat libc6-compat libstdc++ g++ gcc \
+	gcompat libc6-compat libgcc libstdc++ g++ gcc \
 	musl-dev \
 	make cmake ninja \
 	git gnupg \
