Revert: failed attempt, using no arm for alpine

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,9 +9,9 @@
 				"buildx",
 				"build",
 				"--platform",
-				"linux/amd64,linux/arm64,linux/amd64",
+				"linux/amd64,linux/arm64",
 				"-t",
-				"stm32-builder:ubuntu-test",
+				"jasonyangee/stm32-builder:ubuntu-test",
 				"-f",
 				"Dockerfile.ubuntu",
 				"--load",
@@ -30,9 +30,9 @@
 				"buildx",
 				"build",
 				"--platform",
-				"linux/amd64,linux/arm64,linux/amd64",
+				"linux/amd64,linux/arm64",
 				"-t",
-				"stm32-builder:debian-test",
+				"jasonyangee/stm32-builder:debian-test",
 				"-f",
 				"Dockerfile.debian",
 				"--load",
@@ -51,9 +51,9 @@
 				"buildx",
 				"build",
 				"--platform",
-				"linux/amd64,linux/arm64,linux/amd64",
+				"linux/amd64,linux/arm64",
 				"-t",
-				"stm32-builder:alpine-test",
+				"jasonyangee/stm32-builder:alpine-test",
 				"-f",
 				"Dockerfile.alpine",
 				"--load",
@@ -72,9 +72,9 @@
 				"buildx",
 				"build",
 				"--platform",
-				"linux/amd64,linux/arm64,linux/amd64",
+				"linux/amd64",
 				"-t",
-				"stm32-builder:arch-test",
+				"jasonyangee/stm32-builder:arch-test",
 				"-f",
 				"Dockerfile.arch",
 				"--load",
