Add: raw running test

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,10 +17,10 @@ jobs:
         files: [ubuntu, debian, alpine, arch]
 
     steps:
-    - name: Checkout project
+    - name: Checkout Project
       uses: actions/checkout@v3
       
-    - name: Docker meta
+    - name: Docker Meta
       id: meta
       uses: docker/metadata-action@v4
       with:
@@ -56,7 +56,7 @@ jobs:
     - name: Set Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build and Upload amd64 and arm64
+    - name: Build and Upload AMD64 and ARM64
       if: ${{ matrix.files != 'arch' && matrix.files != 'alpine' }}
       uses: docker/build-push-action@v4
       with:
@@ -67,7 +67,7 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
       
-    - name: Build and Upload amd64
+    - name: Build and Upload AMD64
       if: ${{ matrix.files == 'arch' || matrix.files == 'alpine' }}
       uses: docker/build-push-action@v4
       with:
