--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,15 +29,15 @@ jobs:
         files: [ubuntu, debian, alpine, arch]
 
     steps:
-    - name: free disk space from docker
+    - name: Free Disk Space From Docker
       run: |
         docker rmi $(docker image ls -aq)
         df -h
 
-    - name: Checkout project
+    - name: Checkout Project
       uses: actions/checkout@v3
 
-    - name: Checkout example repo
+    - name: Checkout Example Repo
       uses: actions/checkout@v3
       with:
         repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
@@ -81,12 +81,12 @@ jobs:
         files: [ubuntu, debian]
 
     steps:
-    - name: free disk space from docker
+    - name: Free Disk Space From Docker
       run: |
         docker rmi $(docker image ls -aq)
         df -h
 
-    - name: Checkout project
+    - name: Checkout Project
       uses: actions/checkout@v3
 
     - name: Set QEMU
@@ -95,7 +95,7 @@ jobs:
     - name: Set Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build Only
+    - name: Build and Load
       id: build3x
       uses: docker/build-push-action@v4
       with:
@@ -105,15 +105,21 @@ jobs:
         load: true
         tags: stm32-builder/${{ matrix.files }}-test
 
+    # - name: Test ARM64
+    #   uses: uraimo/run-on-arch-action@v2
+    #   with:
+    #     arch: aarch64
+    #     distro: ubuntu20.04
+    #     run: |
+    #       docker run --rm ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+    #       docker run --rm -v "${{ github.workspace }}/project-${{ matrix.files }}-arm64":"/proj" ${{ steps.build3x.outputs.imageid }} /proj-${{ matrix.files }}-arm64
+    #       docker run --rm -v "${{ github.workspace }}/hybrid-${{ matrix.files }}-arm64":"/home" ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
+
     - name: Test ARM64
-      uses: uraimo/run-on-arch-action@v2
-      with:
-        arch: aarch64
-        distro: ubuntu20.04
-        run: |
-          docker run --rm ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-          docker run --rm -v "${{ github.workspace }}/project-${{ matrix.files }}-arm64":"/proj" ${{ steps.build3x.outputs.imageid }} /proj-${{ matrix.files }}-arm64
-          docker run --rm -v "${{ github.workspace }}/hybrid-${{ matrix.files }}-arm64":"/home" ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
+      run: |
+        docker run --platform linux/arm64 --rm ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run --platform linux/arm64 --rm -v "${{ github.workspace }}/project-${{ matrix.files }}-arm64":"/proj" ${{ steps.build3x.outputs.imageid }} /proj-${{ matrix.files }}-arm64
+        docker run --platform linux/arm64 --rm -v "${{ github.workspace }}/hybrid-${{ matrix.files }}-arm64":"/home" ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
 
     - name: Cleanup Folders
       run: |
@@ -127,9 +133,9 @@ jobs:
       - Build_Test_ARM64
     if: always()
     steps:
-      - name: All tests ok
+      - name: All Tests Ok
         if: ${{ !(contains(needs.*.result, 'failure')) }}
         run: exit 0
-      - name: Some tests failed
+      - name: Some Tests Failed
         if: ${{ contains(needs.*.result, 'failure') }}
         run: exit 1
