--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -26,22 +26,22 @@ jobs:
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32-builder
-          ${{ vars.REGISTRY }}/stm32-builder
+          ghcr.io/${{ github.actor }}/stm32-builder
         tags: type=ref,event=tag
         flavor: prefix=${{ matrix.files }}-,onlatest=true
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.USERNAME_DOCKERHUB }}
+        password: ${{ secrets.TOKEN_DOCKERHUB }}
 
     - name: Log in to Github Container Registry
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
-        registry: ${{ vars.REGISTRY }}
-        username: ${{ secrets.USER_GITHUB_PERSONAL }}
-        password: ${{ secrets.TOKEN_GITHUB_PERSONAL }}
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.TOKEN_GITHUB }}
 
     # - uses: actions/delete-package-versions@v4
     #   with: 
