build: more delte

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -48,7 +48,7 @@ jobs:
         package-name: 'stm32-builder'
         package-type: 'container'
         min-versions-to-keep: 0
-        delete-only-untagged-versions: 'false'
+        delete-only-untagged-versions: 'true'
 
     - name: Set QEMU
       uses: docker/setup-qemu-action@v3
